# openactivity

./: .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish-pypi.yml
.specify/memory/: constitution.md
specs/001-strava-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-time-range-compare/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-personal-records/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-gap-effort/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-training-periodization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-race-predictor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-correlation-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-segment-trends/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-garmin-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-cross-provider-linking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-fitness-fatigue-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-unified-command-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-recovery-readiness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+114 files in other folders)
