[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openactivity"
version = "0.1.0"
description = "CLI tool for pulling, analyzing, and exporting fitness activity data from providers like Strava"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Charlie Doern", email = "cdoern@icloud.com" },
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "stravalib>=2.0",
    "fitparse>=1.2.0",
    "keyring>=25.0",
    "matplotlib>=3.8",
    "gpxpy>=1.6",
    "httpx>=0.27",
    "tomli-w>=1.0",
    "scipy>=1.12",
]

[project.scripts]
openactivity = "openactivity.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "vcrpy>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
